k8s/webhook-configuration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: iac-verifier-webhook
webhooks:
  - name: iac-verifier.default.svc
    rules:
      - apiGroups: [""]
        apiVersions: ["v1"]
        operations: ["CREATE", "UPDATE"]
        resources: ["configmaps"]
        scope: "Namespaced"
    clientConfig:
      service:
        name: iac-webhook-service
        namespace: default
        path: "/validate"
        port: 443
      caBundle: "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUMwekNDQWJ1Z0F3SUJBZ0lVUVNCMjdReDgyMjNZdEs4Z3NJc3NFTzlJQ05Bd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0dURVhNQlVHQTFVRUF3d09TV0ZESUZkbFltaHZiMnNnUTBFd0hoY05Nall3T1RBek1EY3hPRFUxV2hjTgpNamN3T1RBek1EY3hPRFUxV2pBWk1SY3dGUVlEVlFRRERBNUpZVU1nVjJWaWFHOXZheUJEUVRDQ0FTSXdEUVlKCktvWklodmNOQVFFQkJRQURnZ0VQQURDQ0FRb0NnZ0VCQU1KdEd0T1VNMkJraGN4WENPSi9DS0RDcldnZ29KRFAKd04weXVSUVNURVQ0OEJrRFB4N1JFRDU0MCszRi9UNzdaWnhZT21uUHM0dGpBRFVrY3JFR2Uvbk00bE1CRE52QQplMDdJSitHNWd [...]
    admissionReviewVersions: ["v1"]
    sideEffects: None
    timeoutSeconds: 10
    failurePolicy: Fail
